<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DayActivityFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtHeaderDayActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/str_header_day_activity"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtCountMafia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/str_num_of_maf_in_game" />

    <TextView
        android:id="@+id/txtSummaryBody"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="150dp">

        <TextView
            android:id="@+id/txtPlayerHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtPlayerAddInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:textColor="#FF0000" />

        <Button
            android:id="@+id/btnShowNextPlayer"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:text="@string/str_next"
            app:cornerRadius="100dp" />

        <CheckBox
            android:id="@+id/chkVotePlayer"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:text="@string/str_vote_player"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnMinusVotePlayer"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="255dp"
            android:layout_marginTop="95dp"
            android:backgroundTint="#F87777"
            android:text="@string/str_minus" />

        <Button
            android:id="@+id/btnPlusVotePlayer"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="95dp"
            android:backgroundTint="#31AC4C"
            android:text="@string/str_plus" />

        <Button
            android:id="@+id/btnStartStopTimer"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="200dp"
            android:text="@string/str_start_timer"
            app:cornerRadius="100dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnGoNightOrVote"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="30dp"
        android:enabled="false"
        android:text="@string/str_night_in_the_city"
        app:cornerRadius="30dp" />

</FrameLayout>