<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MeetingFragment">

    <TextView
        android:id="@+id/txtHeaderMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/str_header_meeting"
        android:textAlignment="center"
        android:textSize="26dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vlAllPlayers"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp" />

    <Button
        android:id="@+id/btnRemind"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="620dp"
        android:text="@string/str_remind"
        app:cornerRadius="50dp"/>

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="620dp"
        android:text="@string/str_go"
        app:cornerRadius="50dp"/>

</FrameLayout>